cambios con OPTIONS