@@ -2,32 +2,34 @@ package dev.api.pokestop.config;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
+    public CorsFilter corsFilter() {
+        CorsConfiguration config = new CorsConfiguration();
 
-        // Aquí permites todos los orígenes temporalmente
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+        // ✅ Permitir origen de tu frontend en Vercel
+        config.setAllowedOrigins(List.of("https://pokestop-app.vercel.app"));
 
-        // Métodos HTTP permitidos
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // ✅ Permitir todos los métodos, incluyendo OPTIONS
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
-        // Headers permitidos
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // ✅ Permitir todos los headers
+        config.setAllowedHeaders(List.of("*"));
 
-        // Permite credenciales si las necesitas
-        configuration.setAllowCredentials(true);
+        // ✅ Permitir credenciales si algún día manejas JWT o cookies
+        config.setAllowCredentials(true);
 
+        // ✅ Configurar y registrar el filtro
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
+        source.registerCorsConfiguration("/", config);
+
+        return new CorsFilter(source);
     }
 }
